<resources>
    <string name="app_name">Parking App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="submit_parking">Submit Parking</string>
    <string name="credits">Credits</string>
    <string name="not">Not</string>
    <string name="todo">TODO</string>
    <string name="OK">ok</string>
    <string name="request_parking">Request Parking</string>
    <string name="profile">Profile</string>
    <string name="add_credits">Add Credits</string>
    <string name="zip_code">ZIP Code</string>
    <string name="first_name">First name</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="button">Button</string>
    <string name="phone">Phone</string>
    <string name="color">Color</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="sign_up">SIGN UP</string>
    <string name="text">Text</string>
    <string name="plate">Plate</string>
    <string name="streetNumber">Street Number</string>
    <string name="length">Length</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="user_icon">User Icon</string>
    <string name="amount">amount</string>
    <string name="plus">+</string>
    <string name="manage_cars">Manage Cars</string>
    <string name="zip">Zipcode</string>
    <string name="addSpace">Add Parking</string>
    <string name="save">Save</string>
    <string name="creditsFor">Price in Credits</string>
    <string name="results">Results</string>
    <string name="enter_desired_zip_code">Enter Desired ZIP Code</string>
    <string name="reviews_of_parked_user">Reviews of Parked User</string>
    <string name="e_t_a">Click below to see the reviews!</string>
    <string name="send_parking_request">Send Parking Request</string>
    <string name="parkedvehicle">ParkedVehicle</string>
    <string name="parked_user">Parked User</string>
    <string name="address">Address</string>
    <string name="reviews">Reviews</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="set_to">Set To</string>
    <string name="set_from">Set From</string>
    <string name="date_time_to">Date,Time  (to)</string>
    <string name="date_time_from">Date,Time  (from)</string>
    <string name="expected_arrival">Expected arrival (minutes)</string>
    <string name="difference">(+- 5 minutes)</string>

</resources>
