<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/phoneUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName|phone"
        app:layout_constraintBottom_toTopOf="@+id/saveBtnUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressUserProfile" />

    <EditText
        android:id="@+id/zipcodeUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/zip_code"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/streetNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailUserProfile" />

    <EditText
        android:id="@+id/firstNameUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lastNameUserProfile6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/addressUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/phoneUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streetNo" />

    <EditText
        android:id="@+id/streetNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/streetNumber"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addressUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipcodeUserProfile" />

    <EditText
        android:id="@+id/lastNameUserProfile6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/emailUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameUserProfile" />

    <EditText
        android:id="@+id/emailUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName|textEmailSubject"
        app:layout_constraintBottom_toTopOf="@+id/zipcodeUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameUserProfile6" />

    <EditText
        android:id="@+id/creditsToBeAddedUserProfile"
        android:layout_width="84dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/firstNameUserProfile"
        app:layout_constraintEnd_toStartOf="@+id/addCreditsBtnUserProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/creditsTextUserProfile" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="118dp"
        android:layout_height="122dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintBottom_toTopOf="@+id/firstNameUserProfile"
        app:layout_constraintEnd_toStartOf="@+id/creditsToBeAddedUserProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/user_icon" />

    <TextView
        android:id="@+id/creditsTextUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/creditsToBeAddedUserProfile"
        app:layout_constraintEnd_toStartOf="@+id/manageCarsBtnUserProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditsNumUserProfile"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/credits" />

    <TextView
        android:id="@+id/creditsNumUserProfile"
        android:layout_width="25dp"
        android:layout_height="29dp"
        android:inputType="numberSigned"
        android:textColor="#FF9800"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/creditsToBeAddedUserProfile"
        app:layout_constraintEnd_toStartOf="@+id/creditsTextUserProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addCreditsBtnUserProfile"
        android:layout_width="47dp"
        android:layout_height="40dp"
        android:background="#588CDA"
        android:text="@string/plus"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditsToBeAddedUserProfile"
        app:layout_constraintTop_toBottomOf="@+id/manageCarsBtnUserProfile" />

    <Button
        android:id="@+id/manageCarsBtnUserProfile"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:background="#588CDA"
        android:text="@string/manage_cars"
        app:layout_constraintBottom_toTopOf="@+id/addCreditsBtnUserProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creditsTextUserProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveBtnUserProfile"
        android:layout_width="65dp"
        android:layout_height="42dp"
        android:background="#588CDA"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneUserProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>