<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.homescreen.HomeScreenActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:alpha="0.6"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@mipmap/transport"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request" />

    <Button
        android:id="@+id/request"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/request_parking"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <Button
        android:id="@+id/profile"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/request"
        app:layout_constraintEnd_toStartOf="@+id/notification"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/submit_parking"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/notification"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:gravity="center"
        android:text="Notifications"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profile"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>